# pymetric-ia

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_data.csv
config/: patterns.yaml
controllers/: data_controller.py  visualization_controller.py
models/: claude_config.py  data_models.py  enhanced_data_store.py  log_manager.py  mongodb_client.py  pattern_manager.py  pydantic_models.py
utils/: helpers.py
views/: app.py
